# nayok

./: .gitignore  Cargo.toml  README.md  events.db  nayok.service  req.http
src/: client.rs  data.rs  main.rs  schema.sql
