[package]
name = "nayok"
version = "0.1.0"
authors = ["mkulak <kleshney@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2.5", features = ["full"] }
pretty_env_logger = "0.4"
bytes = "0.5"
futures-core = { version = "0.3", default-features = false }
rusqlite = { version = "0.23", features = ["chrono"] }
base64 = "0.12"
chrono = "0.4.*"
