[package]
name = "nayok"
version = "0.2.0"
authors = ["mkulak <kleshney@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
hyper = "0.13.*"
tokio = { version = "0.2.*", features = ["full"] }
pretty_env_logger = "0.4"
bytes = "0.5"
futures-core = { version = "0.3", default-features = false }
rusqlite = { version = "0.23", features = ["chrono", "bundled"] }
base64 = "0.12"
chrono = { version = "0.4.*", features = ["serde"] }
url = "2.1.*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper-tls = "0.4.*"
clap = "2.33.1"